--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
     </header>
-    <section class="offcanvas offcanvas-end" tabindex="-1" id="searches" aria-labelledby="offcanvasSearches">
+    <section class="offcanvas offcanvas-end show" tabindex="-1" id="searches" aria-labelledby="offcanvasSearches">
         <div class="offcanvas-header">
             <h5 id="offcanvasSearches">Searches</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -46,6 +46,7 @@
 
         <!-- Custom -->
         <script src="./assets/js/mapbox.js"></script>
+        <script src="./assets/js/forecast.js"></script>
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
