--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Weather Forecast</title>
     <!-- CSS Libraries -->
     <!-- Bootstrap -->
+    <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
     <!-- Mapbox -->
     <link rel="stylesheet" type="text/css" href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css">
@@ -26,18 +26,30 @@
             </div>
         </nav>
     </header>
-    <section class="offcanvas offcanvas-end show" tabindex="-1" id="searches" aria-labelledby="offcanvasSearches">
+    <main class="container mt-3">
+        <section class="row" id="forecast">
+            <article class="col-12 today">
+            </article>
+            <article class="col tomorrow"></article>
+            <article class="col day-3"></article>
+            <article class="col day-4"></article>
+            <article class="col day-5"></article>
+            <article class="col day-6"></article>
+        </section>
+    </main>
+    <section class="offcanvas offcanvas-end" tabindex="-1" id="searches" aria-labelledby="offcanvasSearches">
         <div class="offcanvas-header">
             <h5 id="offcanvasSearches">Searches</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <aside class="offcanvas-body">
             <div id="geo-location"></div>
+            <div id="search-container" class="row mt-2"></div>
         </aside>
     </section>
 
         <!-- JavaScript Libraries -->
-        <!-- Bootstrap bundled with Popper -->
+        <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
         <!-- Mapbox -->
@@ -47,6 +59,7 @@
         <!-- Custom -->
         <script src="./assets/js/mapbox.js"></script>
         <script src="./assets/js/forecast.js"></script>
+        <script src="./assets/js/search.js"></script>
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
